# ocaml-ninety-nine

./: README.md
duplicate_the_elements_of_a_list/: dune-project
duplicate_the_elements_of_a_list/lib/: dune
duplicate_the_elements_of_a_list/test/: dune
insert_an_element_at_a_given_position_into_a_list/: dune-project
insert_an_element_at_a_given_position_into_a_list/lib/: dune
insert_an_element_at_a_given_position_into_a_list/test/: dune
last_two_elements_of_a_list/: dune-project
last_two_elements_of_a_list/lib/: dune
last_two_elements_of_a_list/test/: dune
length_of_a_list/: dune-project
length_of_a_list/lib/: dune
length_of_a_list/test/: dune
modified_run_length_encoding/: dune-project
modified_run_length_encoding/lib/: dune
modified_run_length_encoding/test/: dune
nth_element_of_a_list/: dune-project
nth_element_of_a_list/lib/: dune
nth_element_of_a_list/test/: dune
palindrome/: dune-project
palindrome/lib/: dune
palindrome/test/: dune
remove_kth_element_from_a_list/: dune-project
remove_kth_element_from_a_list/lib/: dune
remove_kth_element_from_a_list/test/: dune
reverse_a_list/: dune-project
reverse_a_list/lib/: dune
reverse_a_list/test/: dune
run_length_encoding/: dune-project
run_length_encoding/lib/: dune
run_length_encoding/test/: dune
split_list_into_two_parts/: dune-project
split_list_into_two_parts/lib/: dune
split_list_into_two_parts/test/: dune
tail_of_a_list/: dune-project
tail_of_a_list/lib/: dune
tail_of_a_list/test/: dune
